Animation Data on lamp stays linked even after unlinking all its data #65175

Closed
opened 2019-05-27 07:03:32 +02:00 by vprime · 5 comments

System Information
Intel celeron b815 processor
6gb Ram
Intel hd graphics

platform: Windows

Blender Version
version: 2.79 (sub 7), branch: blender2.7, commit date: 2019-05-04 13:12, hash: d83a72ec10, type: Release
build date: 19/05/2019, 17:50

Short description of error
Animation Data on lamp(emission strength) stays linked even after unlinking all its data and cannot be controlled individually

Exact steps for others to reproduce the error

  • make a lamp

  • add strength based animation 0 to 100 to 0 in 5 frames

  • duplicate the lamp (shift +d)

  • press u and unlink every object data ,material and animation data

  • Now try moving the keyframe of the second lamp
    BUG?-selecting one keyframe of the new duplicate auto selects keyframes of both

  • this method works properly for mesh and curves and i can easily adjust the individual keyframes but all the lamp animations get force linked(selecting one selects all)

  • screenshot shows the second lamp has different color and size but animation data is force liinked to each other
    BUG.png

**System Information** Intel celeron b815 processor 6gb Ram Intel hd graphics platform: Windows **Blender Version** version: 2.79 (sub 7), branch: blender2.7, commit date: 2019-05-04 13:12, hash: d83a72ec104c, type: Release build date: 19/05/2019, 17:50 **Short description of error** Animation Data on lamp(emission strength) stays linked even after unlinking all its data and cannot be controlled individually **Exact steps for others to reproduce the error** - make a lamp - add strength based animation 0 to 100 to 0 in 5 frames - duplicate the lamp (shift +d) - press u and unlink every object data ,material and animation data - Now try moving the keyframe of the second lamp BUG?-selecting one keyframe of the new duplicate auto selects keyframes of both - this method works properly for mesh and curves and i can easily adjust the individual keyframes but all the lamp animations get force linked(selecting one selects all) - screenshot shows the second lamp has different color and size but animation data is force liinked to each other ![BUG.png](https://archive.blender.org/developer/F7071490/BUG.png)
Author

Added subscriber: @V-prime

Added subscriber: @V-prime
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed for now, checking...

note: there was #59062 / a75ac18638 (but apparently this was only done for materials)

Confirmed for now, checking... note: there was #59062 / a75ac18638 (but apparently this was only done for materials)

This issue was referenced by db0568329e

This issue was referenced by db0568329e46cf58eed2d0f8ab633bdc52251bfc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65175
No description provided.