Fix T65175: nodetree animation stays linked after duplicating a lamp

Reviewers: mont29, brecht

Maniphest Tasks: T65175

Differential Revision: https://developer.blender.org/D4956